syntax = "proto3";
package carbonapi_v2;

// Regenerate with  protoc --gogo_out=. carbonapi_v2_pb.proto
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Metric {
    string name = 1;
    int32 startTime = 2;
    int32 stopTime = 3;
    int32 stepTime = 4;
    repeated double values = 5;
    repeated bool isAbsent = 6;
}

message Metrics {
    repeated Metric metrics = 1 [(gogoproto.nullable) = false];
}

message Match {
    string path = 1;
    bool isLeaf = 2;
}

message Matches {
    // Can't use tag 1 unless it's the same type as in go-graphite/protocol/carbonapi_v2_pb
    repeated Match matches = 2 [(gogoproto.nullable) = false]; // 2 [sic]
}

message Info {
	string name = 1;
	string aggregationMethod = 2;
	int32 maxRetention = 3;
	float xFilesFactor = 4;
	repeated Retention retentions = 5 [(gogoproto.nullable) = false];
}

message Retention {
	int32 secondsPerPoint = 1;
	int32 numberOfPoints = 2;
}

message Infos {
    // Can't use tag 1 unless it's the same type as in go-graphite/protocol/carbonapi_v2_pb
	repeated Info infos = 2; // 2 [sic]
}
